[package]
name = "rust-craft"
version = "0.1.0"
edition = "2021"

[dependencies]
sdl2 = "*"
gl = "0.14.0"
imgui-opengl-renderer = { path = "../rust-imgui-opengl-renderer"}
imgui  = { git = "https://github.com/imgui-rs/imgui-rs.git" }
imgui_sdl2_support = { git = "https://github.com/imgui-rs/imgui-rs.git", package="imgui-sdl2-support" }